--- a/index.htm
+++ b/index.htm
@@ -1,38 +1,109 @@
 <html>
 	<head>
-	<meta charset='UTF-8'>
+		<meta charset='UTF-8'>
 	</head>
 	
 <body>
 <center>
 <div id= 'head'>
-<table border="0" cellspacing="0" cellpadding="0">
+<table>
 	<tr>
-	<td><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRUGeN_-Pgh0aaVVxyDMrGNzMiuUwfQVc8LMw&usqp=CAU' width='900' height='400'></td> 
+		<td><img src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRUGeN_-Pgh0aaVVxyDMrGNzMiuUwfQVc8LMw&usqp=CAU' width='900' height='400'></td> 
 	</tr>
-
 	<tr>
-	<td><h1 style="text-align:center">「Snow Fox's website」</h1></td>
+		<td><h1 style="text-align:center">「Snow Fox's website」</h1></td>
 	</tr>
-
 </table>
-
-
 </div>
 
 
 <div id= 'nav1'>
-<table border="0" cellspacing="0" cellpadding="1" bgcolor='#993333'>
-
+<table width= '1180' border="1" cellspacing="0" cellpadding="5">
 	<tr>
-	<td align='center' bgcolor='#ffffff'>
-		<a href='inde.htm'>作品集</a> ＞ 
-		<a href='OUO.htm'>電繪作品</a> ＞ Photoshop
-	</td>
+		<td align='center'>
+			<a href='inde.htm'>作品集</a> ＞ <a href='OUO.htm'>電繪作品</a> ＞ Photoshop
+		</td>
 	</tr>
+</table>
+</div>
 
+<br>
+
+<div id= 'context'>
+<table width= '1110' border="1" cellspacing="0" cellpadding="5">
+	<tr>
+		<td align='center' colspan='2'><h2>電繪作品 Photoshop</h2></td>
+</tr>
+<tr valign="top">
+<td bgcolor="#ffffff" width="15"><table width="181">
+<tr><td><a href="1.htm"><img src="https://hss.nuu.edu.tw/var/file/20/1020/plugin/mobile/title/hln_2805_7365018_05613.jpg"></td></tr>
+<tr><td><a href="1.htm"><img src="https://hss.nuu.edu.tw/var/file/20/1020/plugin/mobile/title/hln_2811_1663698_05914.jpg"></td></tr>
+<tr><td><a href="1.htm"><img src="https://hss.nuu.edu.tw/var/file/20/1020/plugin/mobile/title/hln_2812_6598392_06210.jpg"></td></tr>
+</table></td>
+	<td>
+		<table>
+			<tr>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602409049594-25f0d27dc2cd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=636&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602348452212-1a883c203b87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1512419867624-8e87dbf850dc?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602417470447-a7dde578df55?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602423427908-88353893c6d4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'></td>
+			</tr>
+			<tr>
+			<td align='center'><a href='.htm' target='_blank'>第一作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第二作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第三作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第四作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第五作品</td>
+			</tr>
+			
+			<tr>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602409049594-25f0d27dc2cd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=636&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602348452212-1a883c203b87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1512419867624-8e87dbf850dc?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602417470447-a7dde578df55?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602423427908-88353893c6d4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'></td>
+			</tr>
+			<tr>
+			<td align='center'><a href='.htm' target='_blank'>第一作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第二作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第三作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第四作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第五作品</td>
+			</tr>
+
+			<tr>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602409049594-25f0d27dc2cd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=636&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602348452212-1a883c203b87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1512419867624-8e87dbf850dc?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602417470447-a7dde578df55?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'></td>
+			<td><img width='190' hight='390' src='https://images.unsplash.com/photo-1602423427908-88353893c6d4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80'></td>
+			</tr>
+			<tr>
+			<td align='center'><a href='.htm' target='_blank'>第一作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第二作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第三作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第四作品</td>
+			<td align='center'><a href='.htm' target='_blank'>第五作品</td>
+			</tr>			
+			
+		</table>
+	</td>	
+	
 </table>
 
+<br>
+
+<div id="bottom">
+  <table width="1180" border="1" cellpadding="0" cellspacing="0">
+    <tr>
+      <td align="center" bgcolor="#FFFFFF"><br />
+        <a href="index.html">&copy版權所有。國立聯合大學文創系。禁止轉貼<br />
+          <br />
+        </a></td>
+    </tr>
+  </table>
+</div>
 
 
 </center>
