--- a/index.htm
+++ b/index.htm
@@ -1,22 +1,86 @@
-<br>
-<center>
-<form action='https://shopee.tw/shop/197525717/search?' method='get'>
-	<input type='text' name='shopCollection'>
-	<input type='submit' value='Confirm'>
-</form>
-
-<form action='https://shopee.tw/shop/197525717/search?' method='get'>
-<select name='shopCollection'>
-	<option value='0'>所有商品</option>
-	<option value='1' selected>新上架</option>
-	<option value='30265462'>清潔保養</option>
-	<option value='30265463'>身體清潔、保養</option>
-	<option value='30265464'>彩妝</option>
-</select>
-	<input type='submit' value='Confirm'>
-</form>
-
-<form action='https://shopee.tw/search?keyword=' method='get'>
-	<input type='text' name='keyword'>
-</form>
-</center>
+<!DOCTYPE html>
+<html lang='zh-tw'>
+<head>
+	<meta charset='utf-8'>
+	<title>Snow Fox's 個人空間</title>
+	<meta name='description' concert='文創空間'>
+	<link rel='stylesheet' href='css/style.css'>
+</head>
+<body>
+	<h1>Snow Fox's 個人空間</h1>
+	<header>
+		<nav class="navigation">
+		<ul>
+			<li><a href='#profile'>自我介紹</a></li>
+			<li><a href='#concert'>個人作品</a></li>
+			<li><a href='book.xml' target='_blank'>我的圖書</a></li>
+			<li><a href='project.htm' target='_blank'>歷年專案計畫</a></li>
+			<li><a href='form.htm' target='_blank'>表單設計</a></li>
+			<li><a href='http://ccdm.nuu.edu.tw' target='_blank'>文創系</a></li>
+			<li><a href='http://www.nuu.edu.tw' target='_blank'>聯合大學</a></li>
+			<li><a href='https://shopee.tw/katrinargr' target='_blank'>蝦皮小店</a></li>
+		</ul>
+		</nav>
+	</header>
+	<main>
+		<div class='mainvisual'>
+		<img src='snowfox.jpg' alt='mainvisual'width='1331'height='40'>
+		</div>
+		<article id='profile'>
+			<div class='inner'>
+				<h2>自我介紹</h2>
+				<p style="font-size:18px;text-align:justify">嗨，我是陳靖元(っ・ω・）っ≡≡≡≡≡≡☆。最近我在透過美劇練習英文還有學Python，
+高中時期因興趣開過Minecraft的遊戲伺服器，因此也讓我學會了許多電腦相關技術，
+最後如果有興趣的話，歡迎光臨我的蝦皮小店 OUO。</p>
+			</div>
+		</article>
+		<article id='concert'>
+			<h2>個人作品</h2>
+			<p align="center">個人簡歷/歷年專案/個人著作</p>
+			<section>
+			<h3>個人簡歷</h3>
+				<table>
+					<tr><th>現職</th><td>聯大生/蝦皮賣家</td></tr>
+					<tr><th>學歷</th><td>聯合大學店學生</td></tr>
+					<tr><th>專長</th><td>休眠</td></tr>
+				</table>
+			</section>
+			<section>
+			<h3>歷年專案</h3>
+				<section class='performer'>
+				<img src='img/dcad1.png' width='300' height='300'>
+				<br>
+				<br>
+				<br>
+				<br>
+				<h3 align="center">《逐夢篇章》</h3>
+				<p align="center">之前為我的Minecraft
+				<p align="center">伺服器所製作的封面圖ouo
+				</section>
+				<br>
+				<section class='performer' align="center">
+				<img src='img/dcad2.jpg' height='216'>
+				<P align="center" style="font-size:18.5px">另一張橫幅的封面圖(ㆁωㆁ)</p>
+				<br>
+				</section>
+				<section class='performer'>
+				<img src='img/dcad3.png' width='600'>
+				<P align="center" style="font-size:18.5px">又是另一張的封面圖（ΦωΦ）</p>
+			</section>
+			<section>
+				<h3>個人著作</h3>
+					<P align="center" style="font-size:17px;font-weight:bold">1.《狐狸的家》</P>
+					<img src='img/1.jpg' width='600'>
+					<P align="center" style="font-size:17px;font-weight:bold">2.《驚恐兔兔》</P>
+					<img src='img/2.jpg' width='600'>
+					<P align="center" style="font-size:17px;font-weight:bold">3.《合成獸》</P>
+					<img src='img/3.jpg' width='600'>
+			</section>
+		</article>
+	</main>
+	<footer>
+	<h5 class='pagetop'><a href='#top'>⮬ 回到首頁</a></h5>
+	<p class='copyright'><small>&copy;CopyRight 2020 文創系</small></p>
+	</footer>
+</body>
+</html>
