--- a/snowfox/contact_us.html
+++ b/snowfox/contact_us.html
@@ -16,6 +16,11 @@
 		</pre>
 		<h3>陶藝館所在位置</h3>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7803.832539603117!2d166.66783589714333!3d-77.84170581909002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xaf773973ada5b34d%3A0xe241f2716549c551!2z5Y2X5p6B5rSy6bqm5YWL6buY5aSa56uZ!5e0!3m2!1szh-CN!2stw!4v1610270250256!5m2!1szh-CN!2stw" width="1200" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		<pre>
+		</pre>
+		<h5><a href="https://snowfoxs.net" target="_blank" >↖ 返回首頁</a></h5>
 	</center>
+</body>
+</html>
 </body>
 </html>
